Added minimum viable product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.initialization-mode=always
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 logging.level.org.springframework.security=DEBUG
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
